<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/poster_iv"
            android:layout_width="@dimen/poster_image_width"
            android:layout_height="@dimen/poster_image_height"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:contentDescription="@string/poster_image"/>

        <TextView
            android:id="@+id/plot_label"
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/poster_iv"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_toEndOf="@id/poster_iv"
            android:layout_toRightOf="@id/poster_iv"
            android:text="@string/plot_label"/>

        <com.ms.square.android.expandabletextview.ExpandableTextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
            android:id="@+id/plot_ex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plot_label"
            android:layout_toEndOf="@id/poster_iv"
            android:layout_toRightOf="@id/poster_iv"
            expandableTextView:collapseDrawable="@drawable/ic_arrow_up"
            expandableTextView:expandDrawable="@drawable/ic_arrow_down"
            expandableTextView:maxCollapsedLines="4">

            <TextView
                android:id="@id/expandable_text"
                style="@style/SubTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"/>

            <ImageButton
                android:id="@id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:background="@android:color/transparent"
                android:contentDescription="@string/expand_icon"
                android:padding="@dimen/standard_margin"/>
        </com.ms.square.android.expandabletextview.ExpandableTextView>

    </RelativeLayout>
</layout>